# dymf-desktop

./: .mcp.json  dymf.db  index.html  package-lock.json  package.json
scripts/: .env.example  migrate-pg-to-sqlite.mjs  test-migrate-transforms.mjs
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: app-sidebar.tsx  nav-main.tsx  nav-management.tsx  nav-user.tsx  s3-image.tsx
src/components/ui/: sidebar.tsx
src/context/: auth-context.tsx
src/lib/: auth.ts  collateral.ts  cp-number.ts  customer.ts  database.ts  file.ts  fixed-asset.ts  guarantor.ts  hr.ts  loan.ts  report.ts  s3.ts  settings.ts
src/routes/: collateral.tsx  cp.tsx  customer-registration.tsx  customer-search.tsx  fixed-assets.tsx  guarantor-registration.tsx  guarantor-search.tsx  home.tsx  hr.tsx  loan-detail.tsx  loan-registration.tsx  loan-search.tsx  login.tsx  overdue-management.tsx  overdue-registration.tsx  overdue-search.tsx  placeholder.tsx  repayment-batch.tsx  repayment-single.tsx  report.tsx  settings.tsx
